# gl-learn

./: .gitignore  CMakeLists.txt  main.cpp
shaders/: default.fs.glsl  default.vs.glsl
util/: shader.hpp
